finally completed to add new activity. merge into NewFeatures

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
         <activity
             android:name=".AddNewGoalActivity"
-            android:label="AddNewGoal" />
+            android:label="Add new goal"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
     </application>
 
 </manifest>
