--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mysecondprojectmoneybox">
+    package="com.breackneck.mysecondprojectmoneybox">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MySecondProjectMoneyBox">
         <activity
-            android:name=".MainActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -24,20 +24,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddNewGoalActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.AddNewGoalActivity"
             android:label="@string/activityTitleNewGoal"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity
-            android:name=".AddMoneyActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.AddMoneyActivity"
             android:label="@string/activityTitleAddMoney"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity
-            android:name=".ChangeCharacterActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.ChangeCharacterActivity"
             android:label="@string/activityTitleChangeCharacter"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713" />
+            android:value="ca-app-pub-3967661567296020~5965954619" />
     </application>
 
 </manifest>
