in progress to create new theme for activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,15 +26,15 @@
         <activity
             android:name="com.breackneck.mysecondprojectmoneybox.AddNewGoalActivity"
             android:label="@string/activityTitleNewGoal"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+            android:theme="@style/OtherActivities"/>
         <activity
             android:name="com.breackneck.mysecondprojectmoneybox.AddMoneyActivity"
             android:label="@string/activityTitleAddMoney"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+            android:theme="@style/OtherActivities"/>
         <activity
             android:name="com.breackneck.mysecondprojectmoneybox.ChangeCharacterActivity"
             android:label="@string/activityTitleChangeCharacter"
-            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+            android:theme="@style/OtherActivities" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3967661567296020~5965954619" />
