--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MySecondProjectMoneyBox">
+        android:theme="@style/Theme.MySecondProjectMoneyBox"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name="com.breackneck.mysecondprojectmoneybox.MainActivity"
             android:exported="true"
