--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.breackneck.mysecondprojectmoneybox"
         minSdk 26
         targetSdk 31
-        versionCode 2
-        versionName "1.5"
+        versionCode 3
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.appodeal.ads:sdk:2.11.0.+'
+    implementation 'com.explorestack:consent:1.0.4'
 }
