--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://artifactory.appodeal.com/appodeal"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
