--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,18 +1,16 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
-        applicationId "com.breackneck.mysecondprojectmoneybox"
-        minSdk 26
-        targetSdk 31
-        versionCode 3
-        versionName "2.0"
+        minSdk 21
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -31,24 +29,14 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Clean Architecture
-    implementation project(path: ':data')
     implementation project(path: ':domain')
 
-    //RxJava
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-
-    //Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.43.2'
-    annotationProcessor 'com.google.dagger:hilt-compiler:2.43.2'
-
-    //Yandex Mobile Ads
-    implementation 'com.yandex.android:mobileads:5.2.0'
-    implementation 'com.yandex.android:mobmetricalib:5.0.0'
+    //Room
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
 }
