--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.MySecondProjectMoneyBox"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name="com.breackneck.mysecondprojectmoneybox.MainActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.presentation.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -30,19 +30,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.breackneck.mysecondprojectmoneybox.AddNewGoalActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.presentation.AddNewGoalActivity"
             android:label="@string/activityTitleNewGoal"
             android:theme="@style/OtherActivities"/>
         <activity
-            android:name="com.breackneck.mysecondprojectmoneybox.AddMoneyActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.presentation.AddMoneyActivity"
             android:label="@string/activityTitleAddMoney"
             android:theme="@style/OtherActivities"/>
         <activity
-            android:name="com.breackneck.mysecondprojectmoneybox.ChangeCharacterActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.presentation.ChangeCharacterActivity"
             android:label="@string/activityTitleChangeCharacter"
             android:theme="@style/OtherActivities" />
         <activity
-            android:name="com.breackneck.mysecondprojectmoneybox.GoalsListActivity"
+            android:name="com.breackneck.mysecondprojectmoneybox.presentation.GoalsListActivity"
             android:label="@string/activityTitleGoalsList"
             android:theme="@style/OtherActivities" />
         <meta-data
