--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,15 +9,16 @@ android {
         applicationId "com.breackneck.mysecondprojectmoneybox"
         minSdk 26
         targetSdk 31
-        versionCode 3
-        versionName "2.0"
+        versionCode 6
+        versionName "3.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
