--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
