--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.breackneck.mysecondprojectmoneybox"
         minSdk 26
         targetSdk 31
-        versionCode 6
-        versionName "3.5"
+        versionCode 7
+        versionName "3.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,6 +36,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.appodeal.ads:sdk:2.11.1.+'
+    implementation ('com.appodeal.ads:sdk:3.0.1.+') {
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'appodeal'
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'nast'
+    }
     implementation 'com.explorestack:consent:1.0.4'
 }
