--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.appodeal.ads:sdk:2.11.1.+'
     implementation 'com.explorestack:consent:1.0.4'
 
     //Clean Architecture
@@ -57,4 +56,18 @@ dependencies {
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    //Appodeal
+    implementation 'com.appodeal.ads.sdk:core:3.0.2'
+    implementation 'com.appodeal.ads.sdk.networks:adcolony:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:applovin:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:bidmachine:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:ironsource:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:mraid:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:my_target:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.services:sentry_analytics:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.services:stack_analytics:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:vast:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:vungle:3.0.2.0'
+    implementation 'com.appodeal.ads.sdk.networks:yandex:3.0.2.0'
 }
